membuat homepage belajar git

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <li>Menguasai perintah dasar Git</li>
     </ul>
 
+    <h2>Penulis Favorit</h2>
+    <p>Beberapa penulis favorit saya adalah Khalil Gibran, Carl Sagan, dan Ustadz Yazid bin Abdul Qadir Jawas.</p>
+
 </body>
 </html>
