membuat web jadi hidup

--- a/login.html
+++ b/login.html
@@ -3,417 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Cafe - Login & Git Commands</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Balsamiq+Sans:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
-    <style>
-        /* Gaya Umum */
-        body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(to right, #6f4e37, #a0522d); /* Warna kopi/coklat hangat */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            color: #fff;
-            overflow-x: hidden;
-            flex-direction: column; /* Untuk menata konten vertikal */
-        }
-
-        /* Container Utama */
-        .container {
-            background-color: rgba(255, 255, 255, 0.95); /* Putih semi-transparan */
-            border-radius: 15px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            width: 90%;
-            max-width: 450px;
-            text-align: center;
-            animation: fadeIn 0.8s ease-out;
-            margin: 20px; /* Margin agar tidak terlalu mepet layar */
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        /* Header Login */
-        .login-header {
-            margin-bottom: 30px;
-        }
-
-        .login-header h1 {
-            font-family: 'Pacifico', cursive; /* Font ala tulisan tangan kafe */
-            color: #4a2c1a; /* Coklat gelap */
-            font-size: 3em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px #d3a373; /* Bayangan krem */
-        }
-
-        .login-header p {
-            font-size: 1.1em;
-            color: #7a5f4d; /* Coklat sedang */
-        }
-
-        /* Form Login */
-        .login-form .input-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .login-form label {
-            display: block;
-            margin-bottom: 8px;
-            color: #4a2c1a;
-            font-weight: bold;
-            font-size: 1em;
-        }
-
-        .login-form input[type="email"],
-        .login-form input[type="password"] {
-            width: calc(100% - 20px);
-            padding: 12px 10px;
-            border: 2px solid #d3a373; /* Border krem */
-            border-radius: 8px;
-            font-size: 1em;
-            color: #333;
-            background-color: #fcfcfc;
-            transition: border-color 0.3s ease;
-        }
-
-        .login-form input[type="email"]:focus,
-        .login-form input[type="password"]:focus {
-            border-color: #a0522d; /* Oranye kopi saat fokus */
-            outline: none;
-        }
-
-        .login-form button {
-            background-color: #8B4513; /* Coklat tua */
-            color: #fff;
-            border: none;
-            padding: 14px 25px;
-            border-radius: 8px;
-            font-size: 1.1em;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            width: 100%;
-        }
-
-        .login-form button:hover {
-            background-color: #a0522d; /* Oranye kopi saat hover */
-            transform: translateY(-3px);
-        }
-
-        /* Bagian Perintah Git */
-        .git-commands-section {
-            display: none; /* Sembunyikan secara default */
-            background-color: rgba(255, 255, 255, 0.98); /* Lebih putih untuk konten */
-            border-radius: 15px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            width: 90%;
-            max-width: 800px;
-            margin-top: 30px; /* Jarak dari form login */
-            animation: slideInUp 0.8s ease-out forwards;
-            color: #333; /* Warna teks gelap */
-        }
-
-        @keyframes slideInUp {
-            from { opacity: 0; transform: translateY(50px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .git-commands-section h2 {
-            font-family: 'Balsamiq Sans', cursive;
-            color: #4a2c1a;
-            font-size: 2.5em;
-            margin-bottom: 25px;
-            text-align: center;
-            position: relative;
-        }
-        .git-commands-section h2::after {
-            content: '';
-            display: block;
-            width: 80px;
-            height: 4px;
-            background-color: #a0522d;
-            margin: 10px auto 0;
-            border-radius: 2px;
-        }
-
-        .git-commands-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Responsif grid */
-            gap: 25px;
-            margin-top: 20px;
-        }
-
-        .git-command-item {
-            background-color: #f7f0e8; /* Krem muda */
-            border: 1px solid #e0d9d0;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-            text-align: left;
-            position: relative;
-            overflow: hidden; /* Untuk efek ikon */
-        }
-
-        .git-command-item:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .git-command-item h3 {
-            font-family: 'Balsamiq Sans', cursive;
-            color: #8B4513; /* Coklat tua */
-            font-size: 1.5em;
-            margin-top: 0;
-            margin-bottom: 10px;
-            position: relative;
-            padding-left: 35px; /* Ruang untuk ikon */
-        }
-
-        .git-command-item h3::before {
-            content: '☕'; /* Ikon kopi untuk judul perintah */
-            font-size: 1.2em;
-            position: absolute;
-            left: 0;
-            top: -2px;
-        }
-
-        .git-command-item p {
-            font-size: 0.95em;
-            color: #555;
-            margin-bottom: 10px;
-        }
-
-        .git-command-item code {
-            display: block;
-            background-color: #eee;
-            padding: 8px 12px;
-            border-radius: 5px;
-            font-family: 'Consolas', 'Courier New', monospace;
-            font-size: 0.9em;
-            color: #c0392b;
-            overflow-x: auto; /* Agar kode bisa di-scroll jika panjang */
-        }
-
-        /* Notifikasi error */
-        .error-message {
-            color: #e74c3c;
-            font-size: 0.9em;
-            margin-top: -10px;
-            margin-bottom: 10px;
-            display: none; /* Sembunyikan secara default */
-        }
-
-        /* Efek partikel kopi */
-        .coffee-bean {
-            position: absolute;
-            background-color: rgba(139, 69, 19, 0.5); /* Coklat transparan */
-            border-radius: 50%;
-            pointer-events: none;
-            animation: float 10s infinite ease-in-out;
-        }
-
-        @keyframes float {
-            0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-            50% { transform: translateY(-20px) rotate(180deg); opacity: 0.7; }
-            100% { transform: translateY(0) rotate(360deg); opacity: 1; }
-        }
-
-        .coffee-bean:nth-child(1) { width: 15px; height: 15px; top: 10%; left: 5%; animation-duration: 12s; }
-        .coffee-bean:nth-child(2) { width: 10px; height: 10px; top: 20%; left: 90%; animation-duration: 9s; }
-        .coffee-bean:nth-child(3) { width: 20px; height: 20px; top: 70%; left: 15%; animation-duration: 15s; }
-        .coffee-bean:nth-child(4) { width: 12px; height: 12px; top: 80%; left: 80%; animation-duration: 11s; }
-        .coffee-bean:nth-child(5) { width: 18px; height: 18px; top: 40%; left: 40%; animation-duration: 13s; }
-        .coffee-bean:nth-child(6) { width: 14px; height: 14px; top: 60%; left: 50%; animation-duration: 10s; }
-        .coffee-bean:nth-child(7) { width: 11px; height: 11px; top: 25%; left: 30%; animation-duration: 8s; }
-        .coffee-bean:nth-child(8) { width: 17px; height: 17px; top: 95%; left: 25%; animation-duration: 14s; }
-        .coffee-bean:nth-child(9) { width: 9px; height: 9px; top: 5%; left: 70%; animation-duration: 7s; }
-        .coffee-bean:nth-child(10) { width: 16px; height: 16px; top: 50%; left: 95%; animation-duration: 12.5s; }
-
-        /* Responsive */
-        @media (max-width: 600px) {
-            .container {
-                padding: 30px;
-            }
-            .login-header h1 {
-                font-size: 2.5em;
-            }
-            .git-commands-section h2 {
-                font-size: 2em;
-            }
-            .git-commands-list {
-                grid-template-columns: 1fr; /* Satu kolom di layar kecil */
-            }
-        }
-    </style>
+    <title>Login - Git Learning</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="login-page-bg">
 
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-    <div class="coffee-bean"></div>
-
-    <div class="container" id="login-container">
-        <div class="login-header">
-            <h1>Git Cafe</h1>
-            <p>Ngopi dulu, nge-Git kemudian!</p>
-        </div>
-        <form class="login-form" id="login-form">
+    <div class="card login-card">
+        <h1>Selamat Datang!</h1>
+        <p>Silakan masuk untuk melanjutkan.</p>
+        
+        <form action="pilihan.html">
             <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="contoh@gitcafe.com" required>
+                <label for="username">Username</label>
+                <input type="text" id="username" required>
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Rahasia banget!" required>
+                <input type="password" id="password" required>
             </div>
-            <p class="error-message" id="login-error">Email atau password tidak boleh kosong!</p>
-            <button type="submit">Ngopi & Login!</button>
+            <button type="submit" class="button-primary">Login</button>
         </form>
     </div>
 
-    <div class="git-commands-section" id="git-commands-section">
-        <h2>Menu Perintah Git Cafe!</h2>
-        <p>Selamat datang di area ngoding! Ini dia perintah-perintah Git yang sering kamu pakai:</p>
-
-        <div class="git-commands-list">
-            <div class="git-command-item">
-                <h3>Git Init</h3>
-                <p>Membuat repositori Git baru di folder saat ini.</p>
-                <code>git init</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Add</h3>
-                <p>Menambahkan perubahan file ke area persiapan (staging area) untuk di-commit.</p>
-                <code>git add &lt;nama-file&gt;</code>
-                <code>git add .</code> (untuk semua perubahan)
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Commit</h3>
-                <p>Menyimpan perubahan yang sudah di-add ke riwayat repositori dengan pesan.</p>
-                <code>git commit -m "Pesan commitmu di sini"</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Status</h3>
-                <p>Melihat status repositori: file apa yang sudah diubah, yang belum di-add, dll.</p>
-                <code>git status</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Log</h3>
-                <p>Melihat riwayat commit repositori.</p>
-                <code>git log</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Branch</h3>
-                <p>Melihat daftar branch yang ada atau membuat branch baru.</p>
-                <code>git branch</code> (melihat)
-                <code>git branch &lt;nama-branch-baru&gt;</code> (membuat)
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Checkout</h3>
-                <p>Berpindah antara branch atau versi commit tertentu.</p>
-                <code>git checkout &lt;nama-branch&gt;</code>
-                <code>git checkout &lt;id-commit&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Merge</h3>
-                <p>Menggabungkan perubahan dari satu branch ke branch lain.</p>
-                <code>git merge &lt;nama-branch-sumber&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Pull</h3>
-                <p>Mengambil perubahan terbaru dari repositori remote (online) dan menggabungkannya ke repositori lokal.</p>
-                <code>git pull origin &lt;nama-branch&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Push</h3>
-                <p>Mengirim perubahan dari repositori lokal ke repositori remote (online).</p>
-                <code>git push origin &lt;nama-branch&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Clone</h3>
-                <p>Mengambil salinan lengkap repositori dari remote ke komputer lokalmu.</p>
-                <code>git clone &lt;url-repositori&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Remote</h3>
-                <p>Mengelola koneksi ke repositori remote.</p>
-                <code>git remote add origin &lt;url-repositori&gt;</code>
-                <code>git remote -v</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Reset</h3>
-                <p>Mengembalikan status repositori ke commit tertentu (hati-hati!).</p>
-                <code>git reset --hard &lt;id-commit&gt;</code>
-                <code>git reset &lt;nama-file&gt;</code> (membatalkan add)
-            </div>
-
-             <div class="git-command-item">
-                <h3>Git Revert</h3>
-                <p>Membuat commit baru yang membatalkan perubahan dari commit sebelumnya (lebih aman dari reset).</p>
-                <code>git revert &lt;id-commit&gt;</code>
-            </div>
-
-            <div class="git-command-item">
-                <h3>Git Config</h3>
-                <p>Mengatur konfigurasi Git lokal atau global.</p>
-                <code>git config --global user.name "Nama Kamu"</code>
-                <code>git config --global user.email "email@contoh.com"</code>
-            </div>
-
-             <div class="git-command-item">
-                <h3>Git Tag</h3>
-                <p>Memberi tanda (tag) pada commit tertentu, biasanya untuk versi rilis.</p>
-                <code>git tag -a v1.0 -m "Versi 1.0"</code>
-                <code>git push origin --tags</code>
-            </div>
-
-        </div>
-    </div>
-
-    <script>
-        document.getElementById('login-form').addEventListener('submit', function(event) {
-            event.preventDefault(); // Mencegah form submit secara default
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const errorMessage = document.getElementById('login-error');
-
-            if (email === "" || password === "") {
-                errorMessage.style.display = 'block'; // Tampilkan pesan error
-            } else {
-                errorMessage.style.display = 'none'; // Sembunyikan pesan error
-                document.getElementById('login-container').style.display = 'none'; // Sembunyikan container login
-                document.getElementById('git-commands-section').style.display = 'block'; // Tampilkan bagian perintah Git
-            }
-        });
-    </script>
 </body>
 </html>
