--- a/pilihan.html
+++ b/pilihan.html
@@ -9,34 +9,38 @@
 <body>
 
     <div class="card choice-card">
-    <div>
-        <h1>Pilih Materi Belajar</h1>
-        <p>Anda berhasil login! Sekarang, silakan pilih materi yang ingin dipelajari.</p>
-    </div>
+        <div>
+            <h1>Pilih Materi Belajar</h1>
+            <p>Anda berhasil login! Sekarang, silakan pilih materi yang ingin dipelajari.</p>
+        </div>
 
-    <div class="choice-grid">
-        <a href="git_cafe.html" class="choice-item">
-            <h2>☕ Git Cafe</h2>
-            <p>Lihat daftar perintah Git.</p>
-        </a>
-        <a href="branch.html" class="choice-item">
-            <h2>🌳 Branch</h2>
-            <p>Pelajari tentang cabang di Git.</p>
-        </a>
-        <a href="sejarah.html" class="choice-item">
-            <h2>📜 Sejarah</h2>
-            <p>Kisah singkat Git & Linux.</p>
-        </a>
-        <a href="tentang.html" class="choice-item">
-            <h2>👤 Tentang Saya</h2>
-            <p>Lihat profil pembuat.</p>
-        </a>
-    </div>
+        <div class="choice-grid">
+            <a href="git_cafe.html" class="choice-item">
+                <h2>☕ Git Cafe</h2>
+                <p>Lihat daftar perintah Git.</p>
+            </a>
+            <a href="branch.html" class="choice-item">
+                <h2>🌳 Branch</h2>
+                <p>Pelajari tentang cabang di Git.</p>
+            </a>
+            <a href="git_tag.html" class="choice-item">
+                <h2>🏷️ Git Tag</h2>
+                <p>Cara menandai versi rilis.</p>
+            </a>
+            <a href="sejarah.html" class="choice-item">
+                <h2>📜 Sejarah</h2>
+                <p>Kisah singkat Git & Linux.</p>
+            </a>
+            <a href="tentang.html" class="choice-item">
+                <h2>👤 Tentang Saya</h2>
+                <p>Lihat profil pembuat.</p>
+            </a>
+        </div>
 
-    <div class="card-footer">
-        <a href="login.html" class="logout-button">Logout 🚪</a>
+        <div class="card-footer">
+            <a href="login.html" class="logout-button">Logout 🚪</a>
+        </div>
     </div>
-</div>
 
 </body>
 </html>
